--- a/index.html
+++ b/index.html
@@ -27,24 +27,14 @@
     </header>
     <section>
         <div class>
-            <h2>Fellow wanted dead (or live if you want to them later)</h2>
+            <h2>Fellow wanted dead <span class="">(or live if you want to them later)</span></h2>
             <button>Most wanted</button>
+            <button>Most dangerous</button>
+            <button>Already captured</button>
             <div>
                 <img src="https://via.placeholder.com/140" alt="Most wanted">
                 <img src="https://via.placeholder.com/140" alt="Most wanted">
                 <img src="https://via.placeholder.com/140" alt="Most wanted">    
-            </div>
-            <button>Most dangerous</button>
-            <div>
-                <img src="https://via.placeholder.com/140" alt="Most dangerous">
-                <img src="https://via.placeholder.com/140" alt="Most dangerous">
-                <img src="https://via.placeholder.com/140" alt="Most dangerous">    
-            </div>
-            <button>Already captured</button>
-            <div>
-                <img src="https://via.placeholder.com/140" alt="Already captured">
-                <img src="https://via.placeholder.com/140" alt="Already captured">
-                <img src="https://via.placeholder.com/140" alt="Already captured">    
             </div>
         </div>
     <hr>
@@ -52,22 +42,22 @@
             <h2>I have captured one of them, how to get my reward?</h2>
             <img src="https://via.placeholder.com/140" alt="Captured picture">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse aperiam fugit, itaque quis ab asperiores. Incidunt nemo facilis maxime sint, possimus amet odio accusamus autem laudantium totam magni perferendis tempora.</p>
-            <button>Contact us</button> 
+            <a href="">Contact us</a>
         </div>
     <hr>
         <div>
             <h2>Best hunters</h2>
             <div>
                 <img src="https://via.placeholder.com/140" alt="Captured picture">   
-                <div>ElvesKiller22</div>
-                <div>2captures -<a href="">Profile</a></div>
+                <span>ElvesKiller22</span>
+                <span>2captures -<a href="">Profile</a></span>
                 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=false&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
     <hr>
         <div>
             <h2>About the ring</h2>
-            <div>Ring Capabilities</div>
+            <h3>Ring Capabilities</h3>
             <div>
                     <table style="width: 100%">
                             <tr>
@@ -89,8 +79,8 @@
                           </table> 
             </div>
             <div>
-                <div>Why the ring is awesome?</div>
-                <div>My precioussssssss!!!</div>
+                <h3>Why the ring is awesome?</h3>
+                <p>My precioussssssss!!!</p>
             </div>
         </div>
     <hr>
